# jsonom

./: README.md  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
jsonom/: __init__.py  get_data.py  parse_data.py  pronom_data.py
tests/: test_get_data.py  test_pronom_data.py
tests/test_data/: container.json  signature.json
