[tool.poetry]
name = "jsonom"
version = "0.1.0"
description = ""
authors = ["Nina Jensen <jnik@aarhus.dk>"]
maintainers = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.aarhusstadsarkiv.dk/"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"
requests = "^2.23.0"
xmltodict = "^0.12.0"
urllib3 = "^1.25.9"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-cov = "^2.8"
black = "^19.10b0"
flake8 = "^3.8.1"
mypy = "^0.770"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

